--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "isort>=6.0.1",
+    "langchain-deepseek>=0.1.3",
     "langchain-mcp-adapters>=0.1.7",
     "langchain[openai]>=0.3.25",
     "langgraph>=0.4.8",
